# weather_data_pipeline

./: Dockerfile.fetcher  Dockerfile.flink-python  Dockerfile.flink_writer  Dockerfile.processor  README.md  config.yaml  data_fetcher.py  data_processor.py  docker-compose.yml  flink_data_writer.py  pyproject.toml  requirements.txt
conf/: flink-conf.yaml
